
  * helpers/coll/*:
    + [JW,NT] Remove "." from Perl's search path.  (Mitigates: #588017)

  * lib/*.pm:
    + [NT] Drop support for translations of tag descriptions.  It never
      got used.
  * lib/Lintian/*.pm:
    + [JW] Fix typos.
  * lib/Lintian/Tags.pm:
    + [JW, NT] Fix mojibake in UTF-8 encoded comments for overrides.
      (Closes: #833052)

  * man/lintian.pod.in:
    + [JW] Fix typo.

  * po4a:
    + [NT] Drop as it was not used.

  * t:
    + [JW,NT] Update tests to work now that dpkg validates
      debian/tests/control.  (Closes: #829635)
    + [NT] Apply patch from Adam Conrad to make some tests work
      when the compiler uses -fPIE by default.

 -- Niels Thykier <niels@thykier.net>  Sun, 19 Jun 2016 20:17:52 +0000

lintian (2.5.45) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - build-depends-arch-without-arch-dependent-binary
      - debhelper-autoscript-in-maintainer-scripts
      - no-strong-digests-in-dsc
      - testsuite-dependency-has-unparsable-elements
    + Removed:
      - build-depends-arch-without-arch-dependant-binary
      - init.d-script-missing-lsb-description

  * checks/application-not-library.{desc,pm}:
    + [JW] Use HTTPS for Alioth URLs.
    + [AB] Don't emit application-in-library-section for packages starting
      with "cpan", not only "cpanplus" and "cpanminus".
  * checks/binaries.{desc,pm}:
    + [NT] Rewrite description for hardening-no-bindnow.  There
      is no references to why bindnow would cause issues.
    + [AB] Relax regexp for missing-dependency-on-perlapi to allow letters
      inside the API name. Thanks Niko Tyni! (Closes: #823437)
  * checks/debhelper.pm:
    + [NT] The /usr/share/R/debian/r-cran.mk file implies
      /usr/share/cdbs/1/rules/debhelper.mk.
  * checks/fields.{desc,pm}:
    + [JW] Fix typos.
    + [AB] Add new check for weak checksums in source packages:
      new tag no-strong-digests-in-dsc (Closes: #824916)
  * checks/files.desc: